# mycode

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
configs/: settings.yaml
docs/: AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  CODING_STANDARDS.MS  CONFIGURATION.md  CONTRIBUTING.MD  DEPENDENCY_INJECTION.md  DESIGN_PRINCIPLES.md  DEVELOPMENT_GUIDE.md  EVENTS.md  EXECUTION_ENGINE.md  MCP.md  MEMORY.md  PLUGIN_SYSTEM.md  PROJECT_STRUCTURE.md  PROVIDERS.md  RUNTIME.md  SECURITY.md  TESTING.md  TOOLS.md  WORKFLOWS.md
src/mycode/: __main__.py
src/mycode/app/: __init__.py  application.py  bootstrap.py  container.py  lifecycle.py
src/mycode/cli/: __init__.py  app.py  commands.py
src/mycode/core/: __init__.py  application.py  container.py  lifecycle.py
src/mycode/core/config/: __init__.py  env.py  loader.py  manager.py  models.py
src/mycode/core/events/: __init__.py  bus.py  event.py  types.py
src/mycode/core/logging/: __init__.py  formatter.py  (+1 more)
src/mycode/llm/: __init__.py  conversation.py  exceptions.py  factory.py  models.py  registry.py  router.py  runtime.py
src/mycode/runtime/: __init__.py  capabilities.py  conversation.py  conversation_store.py  engine.py  factory.py  models.py  provider_config.py  registry.py  router.py
tests/: test_conversation.py
tests/llm/: test_registry.py  test_router.py  test_runtime.py
tests/runtime/: test_conversation_store.py  test_engine.py  test_http_client.py  test_provider_config.py  test_registry.py  test_router.py  test_runtime.py
(+18 files in other folders)
