[project]
name = "mycode"
version = "0.1.0"
description = "Production-grade AI agent framework."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
mycode = "mycode.cli.app:cli"

[dependency-groups]
dev = ["ruff>=0.15.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mycode"]
